--- a/red-pepper-lentil-soup.html
+++ b/red-pepper-lentil-soup.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="description" content="">
   <meta name="keywords" content="">
-  <title>Talking Sumac</title>
+  <title>Roasted Red Pepper & Red Lentil Soup - Talking Sumac</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/ >
