Replaced egg image

--- a/tomato-parmesan-bruschetta.html
+++ b/tomato-parmesan-bruschetta.html
@@ -16,7 +16,7 @@
     <a class="logo" href="#"><img src="./img/logo.svg"></a>
   </nav>
   <header>
-    <h1 class="recipe-title">Tomato <strong>&</strong> Parmesan Bruschetta</h1>
+    <h1 class="recipe-title">Fresh Tomato <strong>&</strong> Parmesan Bruschetta</h1>
     <div class="tags">
       <a class="tag">Starters</a>
       <a class="tag">Quick</a>
