Added an index page :dancer:
Also corrected a few spelling issues and changes a few images

--- a/index.html
+++ b/index.html
@@ -16,48 +16,22 @@
     <a class="logo" href="#"><img src="./img/logo.svg"></a>
   </nav>
   <header>
-    <h1 class="recipe-title">Roasted Red Pepper <strong>&</strong> Red Lentil Soup</h1>
-    <div class="tags">
-      <a class="tag">Vegan</a>
-      <a class="tag">Protein</a>
-      <a class="tag">Quick</a>
-    </div>
-    <p class="receipe-description">You can throw this dish together in around 25 minutes meaning you’ll have more time to spend doing whatever else it is that you enjoy.</p>
-    <div class="main-image-container">
-      <img class="main-image" src="./img/red-pepper-lentil-soup-recipe.jpg">
-    </div>
+    <h1 class="recipe-title">My favourite recipes</h1>
+    <p class="receipe-description">Below are a collection of my favourite recipes. I will be adding to theses as often as I can.</p>
   </header>
-  <section>
-    <div class="ingredients">
-      <h2>Ingredients</h2>
-      <ul>
-        <li>120g of Dried Red Lentils</li>
-        <li>1 Vegetable Stock Cube</li>
-        <li>2 Sweet Red Peppers</li>
-        <li>1 Clove of Garlic</li>
-        <li>1 Teaspoon of Paprika</li>
-        <li>1 Teaspoon of Sumac</li>
-        <li><b>To serve</b></li>
-        <li>Soy Yoghurt</li>
-        <li>Toasted Pumpkin Seeds</li>
-        <li>Chopped Parsley</li>
-      </ul>
-    </div>
-  </section>
-  <section class="method">
-    <div class="method-title">
-      <h2>Method</h2>
-      <p>This recipe should take around <strong>25 minutes</strong> to complete</p>
-    </div>
-    <div class="method-contents">
-      <ol type="1">
-        <li>Set your oven to 220oC and place the sweet red pepper directly onto a rack, leave them to cook turning once for around 20 minutes.</li>
-        <li>Whilst they’re in the oven, cook the lentils as per the instructions on the pack adding the vegetable stock into the cooking water.</li>
-        <li>Drain the lentils and place them in a food processor with the garlic clove(s), paprika and sumac.</li>
-        <li>When the peppers are done (they should be slightly black on the outside) take the green stalks out and add them straight into the food processor (seeds and all).</li>
-        <li>Turn the food processor on and keep it going until you reach the consistency you prefer. I like mine to be smooth, so I’ll keep it going for ages and ages.</li>
-        <li>To serve, pour into a bowl and spoon some of the soy yoghurt on top, then garnish with some toasted pumpkin seeds.</li>
-      </ol>
-    </div>
+  <section class="recipe-collection">
+    <a class="recipe-card" href="./red-pepper-lentil-soup.html">
+      <img src="./img/red-pepper-lentil-soup-card.jpg">
+      <h2>Roasted Red Pepper <strong>&</strong> Red Lentil Soup</h2>
+    </a>
+    <a class="recipe-card" href="./the-perfect-scrambled-eggs.html">
+      <img src="./img/scrambled-egg-card.jpg">
+      <h2>The perfect scrambled eggs</h2>
+    </a>
+    <a class="recipe-card" href="./tomato-parmesan-bruschetta.html">
+      <img src="./img/tomato-parmesan-bruschetta-card.jpg">
+      <h2>Fresh tomato <strong>&</strong> Parmesan Bruscetta</h2>
+    </a>
+    
   </section>
 </body>
