--- a/red-pepper-lentil-soup.html
+++ b/red-pepper-lentil-soup.html
@@ -22,7 +22,7 @@
       <a class="tag">Protein</a>
       <a class="tag">Quick</a>
     </div>
-    <p class="receipe-description">You can throw this dish together in around 25 minutes meaning you’ll have more time to spend doing whatever else it is that you enjoy.</p>
+    <p class="recipe-description">You can throw this dish together in around 25 minutes meaning you’ll have more time to spend doing whatever else it is that you enjoy.</p>
     <div class="main-image-container">
       <img class="main-image" src="./img/red-pepper-lentil-soup-recipe.jpg">
     </div>
