--- a/the-perfect-scrambled-eggs.html
+++ b/the-perfect-scrambled-eggs.html
@@ -22,7 +22,7 @@
       <a class="tag">Protein</a>
       <a class="tag">Quick</a>
     </div>
-    <p class="receipe-description">A morning staple but so easy to get wrong. The trick here is to cook low and slow whilst giving them plenty of attention.</p>
+    <p class="recipe-description">A morning staple but so easy to get wrong. The trick here is to cook low and slow whilst giving them plenty of attention.</p>
     <div class="main-image-container">
       <img class="main-image" src="./img/scrambled-egg-recipe.jpg">
     </div>
