--- a/tomato-parmesan-bruschetta.html
+++ b/tomato-parmesan-bruschetta.html
@@ -21,7 +21,7 @@
       <a class="tag">Starters</a>
       <a class="tag">Quick</a>
     </div>
-    <p class="receipe-description">A perfect starter for any meal, but a particular favourite if you’re cooking up something Italian for dinner.</p>
+    <p class="recipe-description">A perfect starter for any meal, but a particular favourite if you’re cooking up something Italian for dinner.</p>
     <div class="main-image-container">
       <img class="main-image" src="./img/tomato-parmesan-bruschetta-recipe.jpg">
     </div>
