Vegan soda bread added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <img src="./img/tomato-parmesan-bruschetta-card.jpg">
       <h2>Fresh tomato <strong>&</strong> Parmesan Bruscetta</h2>
     </a>
+    <a class="recipe-card" href="./vegan-soda-bread.html">
+      <img src="./img/vegan-soda-bread-card.jpg">
+      <h2>Vegan Soda Bread</h2>
+    </a>
     
   </section>
 </body>
