--- a/orange-bbq-roasted-chicken.html
+++ b/orange-bbq-roasted-chicken.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="description" content="">
   <meta name="keywords" content="">
-  <title>Vegan Soda Bread - Talking Sumac</title>
+  <title>Orange BBQ Roasted Chicken - Talking Sumac</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/ >
@@ -16,32 +16,44 @@
     <a class="logo" href="#"><img src="./img/logo.svg"></a>
   </nav>
   <header>
-    <h1 class="recipe-title">Vegan Soda Bread</h1>
+    <h1 class="recipe-title">Orange BBQ Roasted Chicken</h1>
     <div class="tags">
-      <a class="tag">Vegan</a>
-      <a class="tag">Bread</a>
+      <a class="tag">BBQ</a>
+      <a class="tag">Summer</a>
+      <a class="tag">Chicken</a>
     </div>
-    <p class="recipe-description">Like seemingly a lot of the population, I have taken up baking to kill some time through lockdown. Over the weekend we'd started to run out of bread, and as we were lacking yeast I put my fathers Irish roots to use and put together this simple vegan soda bread for you all to enjoy.</p>
+    <p class="recipe-description">Taking advantage of the weather this weekend, I took the barbecue at my parents house out for it's first spin of the year.</p>
     <div class="main-image-container">
-      <img class="main-image" src="./img/vegan-soda-bread-recipe.jpg">
+      <img class="main-image" src="./img/orange-bbq-roasted-chicken-recipe.jpg">
     </div>
   </header>
   <section>
     <div class="ingredients">
       <h2>Ingredients</h2>
       <ul>
-        <li>450g of Plain/Wholemeal Flour</li>
-        <li>150ml of Oatly (or Equivalent)</li>
-        <li>300g of Soy Yoghurt</li>
-        <li>1 Teaspoon of Baking Powder</li>
-        <li>1 Teaspoon of Salt</li>
+        <li><strong>For the Chicken</strong></li>
+        <li>1 Medium Orange</li>
+        <li>1 Whole Chicken</li>
+        <li>2 Garlic Cloves</li>
+        <li>1 Tablespoon of Cider Vinegar</li>
+        <li>2 Tablespoons of Honey</li>
+        <li>1 Teaspoon of Paprika</li>
+        <li>1 Teaspoon of Dried Rosemary</li>
+        <li>2 Pinches of Sea Salt</li>
+        <li><strong>For the BBQ Sauce</strong></li>
+        <li>200ml of Ketchup</li>
+        <li>100ml of Honey</li>
+        <li>50g of Sugar</li>
+        <li>50ml of Cider Vinegar</li>
+        <li>1 Teaspoon of Wholegrain Mustard</li>
+        <li>30ml of Bourbon (optional)</li>
       </ul>
     </div>
   </section>
   <section class="method">
     <div class="method-title">
       <h2>Method</h2>
-      <p>This recipe should take around <strong>50 minutes</strong> to complete</p>
+      <p>This recipe should take around <strong>25 minutes</strong> to complete</p>
     </div>
     <div class="method-contents">
       <ol type="1">
