Added BBQ Orange Chicken

--- a/orange-bbq-roasted-chicken.html
+++ b/orange-bbq-roasted-chicken.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="description" content="">
   <meta name="keywords" content="">
-  <title>Orange BBQ Roasted Chicken - Talking Sumac</title>
+  <title>Orange Barbecue Roasted Chicken - Talking Sumac</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/ >
@@ -16,13 +16,13 @@
     <a class="logo" href="#"><img src="./img/logo.svg"></a>
   </nav>
   <header>
-    <h1 class="recipe-title">Orange BBQ Roasted Chicken</h1>
+    <h1 class="recipe-title">Orange Chicken <strong>&</strong> BBQ Sauce</h1>
     <div class="tags">
       <a class="tag">BBQ</a>
       <a class="tag">Summer</a>
       <a class="tag">Chicken</a>
     </div>
-    <p class="recipe-description">Taking advantage of the weather this weekend, I took the barbecue at my parents house out for it's first spin of the year.</p>
+    <p class="recipe-description">Taking advantage of the warm weather this weekend, I decided to take the barbecue at my parents out for it's first spin of the year.</p>
     <div class="main-image-container">
       <img class="main-image" src="./img/orange-bbq-roasted-chicken-recipe.jpg">
     </div>
@@ -31,21 +31,21 @@
     <div class="ingredients">
       <h2>Ingredients</h2>
       <ul>
-        <li><strong>For the Chicken</strong></li>
+        <li><strong>For the Orange Chicken</strong></li>
         <li>1 Medium Orange</li>
         <li>1 Whole Chicken</li>
-        <li>2 Garlic Cloves</li>
+        <li>2 Garlic Cloves (Diced)</li>
         <li>1 Tablespoon of Cider Vinegar</li>
         <li>2 Tablespoons of Honey</li>
         <li>1 Teaspoon of Paprika</li>
         <li>1 Teaspoon of Dried Rosemary</li>
         <li>2 Pinches of Sea Salt</li>
-        <li><strong>For the BBQ Sauce</strong></li>
+        <li><strong>For the Barbecue Sauce</strong></li>
         <li>200ml of Ketchup</li>
         <li>100ml of Honey</li>
         <li>50g of Sugar</li>
         <li>50ml of Cider Vinegar</li>
-        <li>1 Teaspoon of Wholegrain Mustard</li>
+        <li>1 Tablespoon of Wholegrain Mustard</li>
         <li>30ml of Bourbon (optional)</li>
       </ul>
     </div>
@@ -53,19 +53,26 @@
   <section class="method">
     <div class="method-title">
       <h2>Method</h2>
-      <p>This recipe should take around <strong>25 minutes</strong> to complete</p>
+      <p>This recipe should take <strong>3-4 hours</strong> to complete</p>
     </div>
     <div class="method-contents">
       <ol type="1">
-        <li>Set your oven to 230oC.</li>
-        <li>Add the dry ingredients to a mixing bowl and make a well in the middle.</li>
-        <li>Combine the Oatly and yoghurt together in a bowl and pour straight into the well.</li>
-        <li>Mix either with your hands or a kneading attachment on a food mixer until a sticky but not wet dough is formed.</li>
-        <li>Turn out the dough into a well floured surface and shape into a ball.</li>
-        <li>Place the bowl in a round baking tray about 4cm deep and score a cross into the top.</li>
-        <li>Place the dough into the oven and bake for 10 minutes.</li>
-        <li>Reduce the oven to 200oC and bake for a further 30-40 minutes or until the loaf sounds hollow.</li>
-        <li>When done turn out onto a wire cooling rack and enjoy.</li>
+        <p><strong>For the Orange Chicken</strong></p>
+        <li>Take the chicken and remove the backbone (if you don't want to do this your butcher will do it for you)</li>
+        <li>Juice the orange into a glass and throw in the honey, diced garlic, cider vinegar, rosemary, paprika and mix well.</li>
+        <li>Next place the chicken in a deep oven proof tray and cut the skin and breast (around 1cm deep) with a knife.</li>
+        <li>Pour the marinade over the chicken, wrap the tray in clingfilm and leave to rest in your fridge for 2 hours (or longer if you can).</li>
+        <li>When thoroughly rested remove the chicken from the fridge and allow to rise to room temperature (should take twenty/thirty minutes).</li>
+        <li>Turn your oven on to 200oC and put the chicken in on the middle shelf for 1-1.5 hours (cook for 10 minutes less than the cooking instructions state). Remembering to regularly take your chicken out to baste in the marinade (I do mine roughly every 15 minutes)</li>
+        <li>Head out to your barbecue and fire it up to a medium heat</li>
+        <li>When the chicken is done, take it out of the oven and bring it straight over to the grill top and place it onto the grill with the open side facing down.</li>
+      </ol>
+      <ol type="1">
+        <p><strong>For the Barbecue Sauce</strong></p>
+        <li>Whilst the chicken is on the barbecue add all the ingredients of the barbecue sauce to a pan and place on a medium heat. My parents barbecue has a side burner, which is super handy in times like this.</li>
+        <li>Combine the ingredients in the pan using a spatula and keep stirring as the liquid begins to reduce down.</li>
+        <li>After around 5 minutes taste the mixture and if it's too sweet add more vinegar, too sour add more honey/sugar.</li>
+        <li>When you're happy with the taste, remove from the heat and scoop into a container to serve.</li>
       </ol>
     </div>
   </section>
