Update recipe title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </a>
     <a class="recipe-card" href="./orange-bbq-roasted-chicken.html">
       <img src="./img/orange-bbq-roasted-chicken-card.jpg">
-      <h2>Orange BBQ Roasted Chicken</h2>
+      <h2>Orange Chicken <strong>&</strong> BBQ Sauce</h2>
     </a>
   </section>
 </body>
