Fixed Logo links in header

--- a/tomato-parmesan-bruschetta.html
+++ b/tomato-parmesan-bruschetta.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav>
-    <a class="logo" href="#"><img src="./img/logo.svg"></a>
+    <a class="logo" href="https://talkingsumac.com"><img src="./img/logo.svg"></a>
   </nav>
   <header>
     <h1 class="recipe-title">Fresh Tomato <strong>&</strong> Parmesan Bruschetta</h1>
