Fixes for mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </nav>
   <header class="title-page">
     <h1 class="recipe-title">My favourite recipes</h1>
-    <p class="recipe-description">Below are a collection of my favourite recipes. I will be adding to theses as often as I can.</p>
+    <p class="recipe-description">Below are a collection of my favourite recipes. I will be adding to these as often as I can.</p>
   </header>
   <section class="recipe-collection">
     <a class="recipe-card" href="./red-pepper-lentil-soup.html">
