New Crispy Chicken Recipe

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       <img src="./img/orange-bbq-roasted-chicken-card.jpg">
       <h2>Orange Chicken <strong>&</strong> BBQ Sauce</h2>
     </a>
-    <a class="recipe-card" href="#">
+    <a class="recipe-card" href="./crispy-chicken-hot-honey.html">
+      <img src="./img/crispy-chicken-card.jpg">
+      <h2>Crispy Chicken <strong>&</strong> Hot Honey Sauce</h2>
     </a>
   </section>
 </body>
